# Card-Venture-Game-Recruiter-Demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
Dinosaur Venture/: Bugs TODO List.txt  Clearing Mantras.txt  Features TODO List.txt  OPEN_FILES.py  app.py  card.py  cardFunctions.py  cardImportHelper.py  cardModFunctions.py  cardTokens.py  clearing.py  dinoCards.py  dinosaurVenture.py  enemyCardMappings.py  enemyCards.py  entity.py  gameplayLogging.py  getCardsByTable.py  helper.py  mainVisuals.py  react.py  simulateCards.py  simulatePulls.py
Dinosaur Venture/Dino_Cards_Depot/: DebugCards.py  FundamentalCards.py  GeneralDinoCards.py  PackingBotCards.py
Dinosaur Venture/Files/: Cards.txt  CardsCSV.txt
Dinosaur Venture/Pyglet/: crash_course.py  crash_course_2.py
Dinosaur Venture/Storage of Deprecated Things/: Deprecated Dino Cards.py  Deprecated Enemy Cards.py  new 1.py  save.txt
Dinosaur Venture/Text Files/: Bugs TODO List.txt  Clearing Mantras.txt
Storage of Deprecated Things/: Deprecated Dino Cards.py  Deprecated Enemy Cards.py  app.py  new 1.py  save.txt
Storage of Deprecated Things/Files/: CardsCSV.txt
Storage of Deprecated Things/Pyglet/: crash_course.py  crash_course_2.py
Text Files/: Dino Cards List Plaintext
documents/: Bugs TODO List.txt  Clearing Mantras.txt  Dino Cards List Plaintext  Features TODO List.txt
logs/: 2025-10-25 13.53.00.370080
src/: channel_linked_lists.py
src/Dinosaur_Venture.egg-info/: PKG-INFO  (+3 more)
tests/: test_cardSetOnePlay.py  test_cardsThatLeavePlay.py  test_dealDamage.py
web_app/: app.py
(+68 files in other folders)
