[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Dinosaur_Venture"
version = "0.1.0"
description = "Journey through several places, gathering new cards and meeting new enemies all throughout"
dependencies = [
    "colorama>=0.4.6",
    "send2trash>=1.8.3",
    "pytest>=8.4.2",
    "pytest-timeout>=2.4.0",
    "Send2Trash>=1.8.3"
]